# oXc-anteriorite-2025

./: .gitignore  ARCHITECTURE-OXC.xmi  ARCHITECTURE-UML-HOLODEX.md  AUTHORSHIP.md  DEPOT-UNIFIE-OXC-2025.md  EDUCATION-CIRCULAIRE.oxc  ERRATUM-NOM-AUTEUR.md  FACTS.md  FORMAT-HOLOIDEA-v3.3-COMPLETE.md  FORMAT-HOLOIDEA-v3.5-REFERENCE.md  FORMAT-HOLOIDEA-v3.6-REFERENCE.md  FORMAT-HOLOIDEA-vX.0.1-REFERENCE.md  FORMATION-HOLOCYCLIE.oxc  HOLOCYCLIE.oxc  HOLODEX-INTEGRAL.oxc  HOLON-BOX.oxc  IDENTITE-AUTEUR-HAMMANH.md  LICENSE-OXC-v1.0.md  LICENSE-OXC.md  MANIFEST.sha256  PALETTE-COULEURS-OXC.oxc  README.md  REPRODUCIBLE-VERIFICATION.md  TYPES-AGENTS-CELLULAIRES.oxc  VISION-HOLON-BOX-FLASH-14-DEC-2025.md
01-PUBLICATIONS-FONDATRICES/: ADDENDUM-REVELATIONS.md  PARTIE-IX-EPIGENETIQUE.md  PUBLICATION-PARTIE1.md  PUBLICATION-PARTIE2.md  REVELATIONS-1ER-DEC.md
02-DOCUMENTS-STRATEGIQUES/: ETAT-LIEUX-FINAL.md  PITCH-OXC-UNIFIE-2025.md  QUINTESSENCE-PRINCIPES.md  STRATEGIE-PI.md  VISION-ATEMPORELLE.md
03-KERATON/: EXECUTIVE-SUMMARY.md  PITCH-DECK.md  VISION-COMPLETE.md
04-FONDATIONS-TECHNIQUES/: 13-PILIERS-OXC.md  6-MONNAIES-OXC.md  AXIOME-GENESIS.md  GLOSSAIRE-OXC.md  TRINITE-8-9-10.md
04-SYSTEME-NERVEUX/: Cargo.toml
04-SYSTEME-NERVEUX/src/: agent_type.rs  dialogue.rs  frequence.rs  holon.rs  lib.rs  lifecycle.rs  ontologies.rs  resonance.rs  verbes.rs
05-HOLOPOIESIS/: EDUCATION-CIRCULAIRE-BRIQUE-oXc.docx  EDUCATION-CIRCULAIRE-INTEGRATION-HOLOPOIESIS.md  HOLOPOIESIS-5-MODELES-APPLICATION-OXC.md  HOLOPOIESIS-MODELE-LIVRE-COMPLET-OXC.md  (+1 more)
06-HOLOCYCLIE/: HOLOCYCLIE.oxc  (+3 more)
(+94 files in other folders)
