[package]
name = "systeme-nerveux-d13"
version = "0.1.0"
edition = "2021"
authors = ["Marc Victor R BOUCHER <hammanh@oxc.org>"]
description = "D13 - Système Nerveux oXc : Bindings Rust, transduction signal ↔ symbole"
license = "Proprietary"
repository = "https://github.com/Hammanh/oXc-anteriorite-2025"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
colored = "2.1"

[lib]
name = "systeme_nerveux"
path = "src/lib.rs"

[[bin]]
name = "yatasana"
path = "src/bin/yatasana.rs"
